--- a/mod_version.ini
+++ b/mod_version.ini
@@ -1,8 +1,8 @@
 [Main]
-VersionString="0.53"
-DownloadSizeString="2 GB"
+VersionString="0.55"
+DownloadSizeString="109 MB"
 Markdown="changelog.md"
 
 [Changelog]
 StringCount=1
-String0="Initial Release"
+String0="Layout Updates + Misc Optimization"
