-Further tweaked mirror height and ranges
-Fixed puddles not rendering properly on every game boot, added softedge to them

--- a/mod.ini
+++ b/mod.ini
@@ -8,9 +8,9 @@ DependsCount=2
 UpdateServer="https://raw.githubusercontent.com/Melpontro/CCove/master/"
 
 [Desc]
-Title="CrashedCoveZoneRC"
+Title="CrashedCoveZone"
 Description="Beachy"
-Version="0.56"
-Date="2022.04.05"
+Version="0.57"
+Date="2022.04.06"
 Author="Melpontro Team"
 AuthorURL="https://www.youtube.com/user/Melpontro"
